--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin></script>
       <script>var Alert = ReactBootstrap.Alert;</script>
-    
   </head>
-  <body>
+  <body class="bod">
     <div id="root">
+      <button class="btn-download">DONWLOAD</button>
     </div>
   </body>
 </html>
